--- a/2-zmienne/index.html
+++ b/2-zmienne/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Zmienne</title>
     
 </head>
 <body>
-    <script src="js/2-var.js"></script>
+    <script src="js/zmienne.js"></script>
 </body>
 </html>
