--- a/4-typy-danych/index.html
+++ b/4-typy-danych/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Typy Danych</title>
     
 </head>
 <body>
-    <script src="js/js.js"></script>
+    <script src="js/typy-danych.js"></script>
 </body>
 </html>
