--- a/5-tablice/index.html
+++ b/5-tablice/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Tablice</title>
 
 </head>
 
 <body>
-    <script src="js/js.js"></script>
+    <script src="js/tablice.js"></script>
 </body>
 
 </html>
