--- a/1-komentarze/index.html
+++ b/1-komentarze/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Komentarze</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
-
+    <h1>Komentarze JS!!!</h1>
     <script src="js/komentarze.js"></script>
 </body>
 
