--- a/7-klasy/index.html
+++ b/7-klasy/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Klasy</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <script src="js/klasy.js"></script>
-</body>
-
+  </body>
 </html>
